# kqcDB

./: .gitignore  CHARACTER.skm  CMakeLists.txt  README.md  buildProject.bat  buildProject.sh  generateMakeFiles.bat  generateMakeFiles.sh
common/: CLI.hh  Constants.hh  DBHeader.hh  Logger.hh  OSdefines.hh  Retcode.hh  UtilityFunctions.hh
dbGenerator/: CMakeLists.txt
dbGenerator/inc/: ObjectSchema.hh  Schema.hh
dbGenerator/src/: Schema.cpp  main.cpp
qcDB/: qcDB.hh
schemaFiles/: character.skm  directorypath.skm  filename.skm  index.skm
testDB/: CMakeLists.txt
testDB/src/: main.cpp
windowsTestDB/: CMakeLists.txt
windowsTestDB/src/: main.cpp
