cmake_minimum_required(VERSION 3.21)

project(qcDB)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(COMPONENT_DB_GENERATOR dbGenerator)
set(COMPONENT_DB_TEST testDB)

add_subdirectory(${COMPONENT_DB_GENERATOR})
#add_subdirectory(${COMPONENT_DB_TEST})